[package]
name = "iowrap"
version = "0.1.2"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Small helpers for using io::Read/io::Write"
repository = "https://github.com/FauxFaux/iowrap-rs"
readme = "README.md"
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "FauxFaux/iowrap-rs"
