[package]
name = "iowrap"
version = "0.2.1"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Small helpers for using io::Read/io::Write"
repository = "https://github.com/FauxFaux/iowrap-rs"
readme = "README.md"
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

edition = "2021"

[badges.travis-ci]
repository = "FauxFaux/iowrap-rs"

[dependencies]
memchr = "2"

[dev-dependencies]
byteorder = "1"
